--- a/package.json
+++ b/package.json
@@ -6,21 +6,28 @@
   "author": "assembleX",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node --files src/index.ts",
-    "lint": "tsc --noEmit --skipLibCheck && eslint \"**/*.{js,ts}\" --quiet --fix"
+    "dev": "nodemon src/server.ts",
+    "lint": "tsc --noEmit --skipLibCheck && eslint \"**/*.{js,ts}\" --quiet --fix",
+    "build": "npm run build:types && npm run build:js",
+    "build:types": "tsc --noEmit --skipLibCheck",
+    "build:js": "babel src --copy-files --out-dir lib --extensions \".ts,.tsx\" --source-maps inline"
   },
   "devDependencies": {
+    "@babel/cli": "^7.14.3",
+    "@babel/core": "^7.14.3",
+    "@babel/node": "^7.14.2",
     "@babel/preset-env": "^7.14.0",
     "@babel/preset-typescript": "^7.13.0",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
+    "babel-plugin-inline-import": "^3.0.0",
+    "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^7.25.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
-    "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   },
   "dependencies": {}
 }
-
