--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon src/server.ts",
+    "build": "tsc",
     "lint": "tsc --noEmit --skipLibCheck && eslint \"**/*.{js,ts}\" --quiet --fix"
   },
   "devDependencies": {
