--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "tsc --noEmit --skipLibCheck && eslint \"**/*.{js,ts}\" --quiet --fix"
   },
   "devDependencies": {
+    "@types/express": "^4.17.11",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "eslint": "^7.25.0",
@@ -20,5 +21,12 @@
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.4"
   },
-  "dependencies": {}
+  "dependencies": {
+    "express": "^4.17.1",
+    "express-session": "^1.17.2",
+    "inversify": "^4.13.0",
+    "inversify-express-utils": "^4.2.2",
+    "reflect-metadata": "^0.1.13",
+    "swagger-express-ts": "^1.1.0"
+  }
 }
