--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "author": "assembleX",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/server.ts",
-    "build": "tsc",
+    "dev": "ts-node-dev --respawn src/server.ts",
     "lint": "tsc --noEmit --skipLibCheck && eslint \"**/*.{js,ts}\" --quiet --fix"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/swagger-ui-express": "^4.1.2",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "eslint": "^7.25.0",
@@ -19,15 +19,17 @@
     "eslint-plugin-prettier": "^3.4.0",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
-    "ts-node": "^9.1.1",
+    "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "express-session": "^1.17.2",
     "inversify": "^4.13.0",
     "inversify-express-utils": "^4.2.2",
     "reflect-metadata": "^0.1.13",
-    "swagger-express-ts": "^1.1.0"
-    "express": "^4.17.1"
+    "swagger-express-ts": "^1.1.0",
+    "swagger-jsdoc": "*",
+    "swagger-ui-express": "^4.1.6"
   }
 }
