--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "author": "assembleX",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/server.ts",
+    "dev": "nodemon --files src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
     "lint": "tsc --noEmit --skipLibCheck && eslint \"**/*.{js,ts}\" --quiet --fix"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/faker": "^5.5.5",
     "@types/swagger-ui-express": "^4.1.2",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
@@ -25,11 +26,12 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "celebrate": "^14.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "faker": "^5.5.3",
     "inversify": "^4.13.0",
     "inversify-express-utils": "^4.2.2",
-    "qs": "^6.10.1",
     "reflect-metadata": "^0.1.13",
     "swagger-express-ts": "^1.1.0",
     "swagger-jsdoc": "*",
