--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "paths": {
       "*": ["node_modules/*", "src/*"]
     },
-    "typeRoots": ["@types", "./node_modules/@types"],
+    "typeRoots": ["./node_modules/@types", "@types"],
     "outDir": "dist"
   },
   "include": ["**/*.ts"]
