--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "assembleX",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon --files src/server.ts",
+    "dev": "nodemon -e yml --files src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
     "lint": "tsc --noEmit --skipLibCheck && eslint \"**/*.{js,ts}\" --quiet --fix"
