--- a/src/swagger/gilbert.yml
+++ b/src/swagger/gilbert.yml
@@ -61,8 +61,8 @@ components:
         - name
         - profileUrl
         - rating
-        - guideCount
         - cost
+        - introduction
       properties:
         id:
           type: string
@@ -70,6 +70,11 @@ components:
           type: string
         profileUrl:
           type: string
+        introduction:
+          type: string
+        volunteerCount:
+          type: integer
+          minimum: 0
         guideCount:
           type: integer
           minimum: 0
@@ -92,7 +97,9 @@ components:
         rating: 1
         delay: 2.1
         cost: 2800
+        volunteerCount: 6
         guideCount: 16
+        introduction: We're going safely to our destination together.
     Gilberts:
       type: array
       items:
