--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "lowdb": "^2.0.3",
     "reflect-metadata": "^0.1.13",
     "swagger-express-ts": "^1.1.0",
-    "swagger-jsdoc": "*",
+    "swagger-jsdoc": "^6.0.0",
     "swagger-ui-express": "^4.1.6"
   }
 }
