--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/faker": "^5.5.5",
+    "@types/lodash": "^4.14.170",
+    "@types/lowdb": "^1.0.10",
     "@types/swagger-jsdoc": "^6.0.0",
     "@types/swagger-ui-express": "^4.1.2",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
@@ -38,7 +40,8 @@
     "faker": "^5.5.3",
     "inversify": "^4.13.0",
     "inversify-express-utils": "^4.2.2",
-    "lowdb": "^2.0.3",
+    "lodash": "^4.17.21",
+    "lowdb": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "swagger-express-ts": "^1.1.0",
     "swagger-jsdoc": "^6.0.0",
