--- a/src/swagger/guides.yml
+++ b/src/swagger/guides.yml
@@ -1,5 +1,5 @@
 paths:
-  /api/guides/start:
+  /api/guides/:guide_id/start:
     post:
       parameters:
         - in: path
@@ -17,7 +17,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/GuideStart'
         '400':
-          description: missing params or got wrong parameter type
+          description: got server error
           content:
             application/json:
               schema:
@@ -31,6 +31,7 @@ components:
       required:
         - id
         - status
+        - steps
       properties:
         id:
           type: string
@@ -39,8 +40,38 @@ components:
           enum:
             - START
             - WAIT
-            - ARRIVE
-            - CANCEL
+        totalEstimatedTime:
+          type: object
+          properties:
+            time:
+              type: number
+            unit:
+              enum:
+                - min
+                - hour
+        steps:
+          type: object
+          properties:
+            base:
+              type: string
+            destination:
+              type: string
+            transportation:
+              type: string
+              enum:
+                - BUS
+                - TAXI
+                - WALK
+                - SUBWAY
+            estimatedTime:
+              type: object
+              properties:
+                time:
+                  type: number
+                unit:
+                  enum:
+                    - min
+                    - hour
       example:
         id: 05be3aa9-8b05-4cc9-8fa1-15fa6c980238
         status: START
